# template-experiment-project

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  dvc.yaml  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-report.yaml  doc-request.yaml  feature-request.yaml
.github/workflows/: cml.yaml  stale.yaml
data/: README.md
models/: README.md
notebooks/: 01-user-example.ipynb  README.md
results/: README.md
scripts/: README.md  jupyterlab-setup.sh
src/data/: README.md
src/models/: README.md
src/utils/: README.md
