[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "TODO"
version = "0.0.0"
description = "The template experiment project"
authors=[{ name = "Erik Novak" }]
maintainers = [{ name = "Erik Novak" }]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["dependencies"]
keywords = ["python", "machine learning", "natural language processing"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.9"

[project.urls]
Source = "https://github.com/eriknovak/template-experiment-project"
Docs = "https://eriknovak.github.io/anonipy"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "python-githooks",
    "mkdocs-material",
    "mkdocstrings[python]",
]
test = [
    "coverage",
    "nbmake",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }